--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,10 @@ aside {
 #info p {
     margin-bottom: 25px;
 }
-
+blockquote{
+    padding-left: 20%;
+    padding-right: 10%;
+}
 aside h2 {
     background-color: yellow;
     color: rgb(73, 66, 66);
